Removed non-atomic updates around deprecation